consul/consul_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: consul-pod
  labels:
    app: consul
spec:
  containers:
  - name: consul-container
    image: consul:latest
    ports:
    - containerPort: 8500
