consul/consul_service.yml
apiVersion: v1
kind: Service
metadata:
  name: consul-svc
spec:
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
    nodePort: 30500
  type: NodePort
