consul/consul_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /consul
        pathType: Prefix
        backend:
          service:
            name: consul
            port:
              number: 8500
